# hunter

./: .gitignore  README.md  start-hunter.bat
.cursor/skills/discover-code-smells/: SKILL.md
.cursor/skills/minimal-coding-standard/: SKILL.md
backend/: .env.example  README.md  pyproject.toml  pytest.ini  run-api-tests.bat  run_tests_and_report.py
backend/hunter/: cli.py
backend/hunter/api/: main.py
backend/hunter/clients/: youtube.py
backend/hunter/config/: keywords.py  keywords.yaml  settings.py
backend/hunter/models/: kol.py  topic_api.py
backend/hunter/pipeline/: discover.py
backend/hunter/scoring/: rank.py
backend/hunter/storage/: db.py  queries.py  topics.py
backend/hunter/utils/: contact.py
backend/reports/: .gitignore
backend/tests/: conftest.py  report_md.py  test.bat  test_api_discover.py  test_api_health.py  test_api_kols.py  test_api_topics.py
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
scripts/: run-backend.bat  run-frontend.bat
